# Docker-Compose

./: .env.sample  .gitignore  .gitmodules  README.md  docker-compose-Domain.yml  docker-compose-Full_Platform.yml  docker-compose-IT_Domain.yml  docker-compose-IoT_Domain.yml  docker-compose.yml  production.yml  resilmesh.conf.sample  restore_gitmodules.txt
.github/ISSUE_TEMPLATE/: bug_report.md
Aggregation/: docker-compose.yml  prueba_branches_main.txt
Docker/: docker-compose.yml
Docker/Aggregation/: .gitmodules
Docker/Situation-Assessment/CASM/: .gitignore  README.md  config.py  cve-connector.Dockerfile  slp_enrichment.Dockerfile
Docker/Situation-Assessment/CASM/cve_connector/: README.md  cve_temporal.py  pyproject.toml
Docker/Situation-Assessment/CASM/cve_connector/nvd_cve/: AbsClient.py  CveConnectorClient.py  cve_client.py  cve_parser.py  toneo4j.py  vulnerability.py
Docker/Situation-Assessment/CASM/cve_connector/nvd_cve/categorization/: cia_loss.py  classifier.py  code_execution.py  gain_privileges.py  utils.py
Docker/Situation-Assessment/CSA/: Dockerfile  config.py
Docker/Situation-Assessment/ISIM/: README.md  compose.yaml  pyproject.toml
Docker/Situation-Assessment/WP6_AIBAST/: .gitignore  ReadMe.md  docker-compose.yaml  main.py  planner_test.py
Docker/Threat-Awareness/AI-Correlation/: AlertCorrelation.ipynb
Docker/Threat-Awareness/AI_Based_Detector/: .env.sample  Dockerfile  Makefile
Scripts/: Domain.sh  Full_Platform.sh  IT_Domain.sh  IoT_Domain.sh  init.sh  init_releases.sh  releases.sh  releases_test.sh  remove_all.sh  script_SA.sh  script_misp.sh  script_pending.sh  wazuh_script.sh
Situation-Assessment/CASM/: Dockerfile  compose.yml  nmap.Dockerfile  pyproject.toml
Situation-Assessment/CASM/config/: config.yaml
Situation-Assessment/CASM/cve_connector/: README.md  cve_temporal.py
Situation-Assessment/CASM/cve_connector/nvd_cve/: cpe_identifier.py  cve_client.py  cve_parser.py  vulnerability.py
Situation-Assessment/CASM/cve_connector/nvd_cve/categorization/: cia_loss.py  classifier.py  code_execution.py  gain_privileges.py  utils.py
Situation-Assessment/CASM/easyeasm_demo/: utils.py  worker.py  workflow.py
Situation-Assessment/CASM/temporal/easm/: activities_impl.py  parent_workflow.py  worker.py
Situation-Assessment/CASM/temporal/easm/passive_enumeration/: activities.py  activities_impl.py  workflow.py
Situation-Assessment/CASM/temporal/nmap/basic/: workflow.py
Situation-Assessment/CASM/temporal/nmap/topology/: activities.py  workflow.py
Situation-Assessment/CASM/temporal/slp_enrichment/: activities.py  workflow.py
Situation-Assessment/CASM/test/: tests.py
Situation-Assessment/CASM/test/test-data/: scan.csv
Situation-Assessment/CSA/: README.md  compose.yml  pyproject.toml
Situation-Assessment/CSA/temporal/criticality/: computation.py  workflow.py
Situation-Assessment/ISIM/: .gitignore  Dockerfile
Situation-Assessment/ISIM/config/: config_docker.yaml
Situation-Assessment/ISIM/docs/: mission_guidelines.md
Situation-Assessment/ISIM/isim_graphql/: README.md  package-lock.json  package.json
Situation-Assessment/ISIM/isim_rest/: manage.py
Situation-Assessment/ISIM/neo4j_adapter/: README.md
Situation-Assessment/WP6_AIBAST/: main.py  main_test.py  requirements.txt
Situation-Assessment/WP6_AIBAST/figures/: network_graph_scan-xploit.json
Situation-Assessment/WP6_AIBAST/pentester/: __init__.py  config.py  executor.py  logging_setup.py  memory_saver.py  network_graph.json  pentest_types.py  planner_tasks.json  planner_tasks_full.json  prompt_templates.py  utils.py
Threat-Awareness/AI-Correlation/: README.md
Threat-Awareness/AI_Based_Detector/: README.md  logging_setup.py  main.py  requirements.txt
Threat-Awareness/AI_Based_Detector/data/: cut_data.py  (+1 more)
(+117 files in other folders)
